--- a/.config/latte/keyiflerolsun.layout.latte
+++ b/.config/latte/keyiflerolsun.layout.latte
@@ -9,9 +9,10 @@ enableKWinEdges=true
 formfactor=2
 immutability=1
 isPreferredForShortcuts=false
-lastScreen=11
+lastScreen=10
 location=4
-onPrimary=true
+name=
+onPrimary=false
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
@@ -22,24 +23,34 @@ viewType=0
 visibility=2
 wallpaperplugin=org.kde.image
 
-[Containments][1][Applets][10]
+[Containments][1][Applets][12]
 immutability=1
 plugin=org.kde.latte.spacer
 
-[Containments][1][Applets][10][Configuration]
-PreloadWeight=0
+[Containments][1][Applets][12][Configuration]
+PreloadWeight=26
 
-[Containments][1][Applets][10][Configuration][General]
+[Containments][1][Applets][12][Configuration][General]
 containmentType=Latte
 
-[Containments][1][Applets][11]
+[Containments][1][Applets][13]
 immutability=1
 plugin=org.kde.latte.spacer
 
-[Containments][1][Applets][11][Configuration]
-PreloadWeight=0
+[Containments][1][Applets][13][Configuration]
+PreloadWeight=26
 
-[Containments][1][Applets][11][Configuration][General]
+[Containments][1][Applets][13][Configuration][General]
+containmentType=Latte
+
+[Containments][1][Applets][14]
+immutability=1
+plugin=org.kde.latte.spacer
+
+[Containments][1][Applets][14][Configuration]
+PreloadWeight=26
+
+[Containments][1][Applets][14][Configuration][General]
 containmentType=Latte
 
 [Containments][1][Applets][2]
@@ -51,7 +62,8 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:code_code.desktop,applications:telegramdesktop.desktop,applications:org.kde.dolphin.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop
+launchers59=applications:brave-browser.desktop,applications:code_code.desktop,applications:telegramdesktop.desktop,applications:org.kde.dolphin.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
+manualScrollTasksType=Disabled
 
 [Containments][1][Applets][5]
 activityId=
@@ -63,7 +75,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][5][Configuration]
-PreloadWeight=0
+PreloadWeight=10
 activityId=
 formfactor=0
 immutability=1
@@ -79,8 +91,36 @@ DialogWidth=880
 [Containments][1][Applets][5][Configuration][General]
 labelMode=3
 labelText=İndirilenler
-url=file:///home/keyiflerolsun/Downloads
+positions={"1920x1080":[]\\,"1600x900":[""]}
+url=file:///home/keyiflerolsun/İndirilenler
 viewMode=1
+
+[Containments][1][Applets][52]
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][1][Applets][52][Configuration]
+PreloadWeight=38
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][1][Applets][52][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][1][Applets][52][Configuration][General]
+positions={"1920x1080":[]}
+url=file:///mnt/KekikHDD
 
 [Containments][1][Applets][6]
 immutability=1
@@ -107,16 +147,6 @@ plugin=org.kde.latte.separator
 [Containments][1][Applets][8][Configuration]
 PreloadWeight=0
 
-[Containments][1][Applets][9]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][1][Applets][9][Configuration]
-PreloadWeight=0
-
-[Containments][1][Applets][9][Configuration][General]
-containmentType=Latte
-
 [Containments][1][ConfigDialog]
 DialogHeight=894
 DialogWidth=539
@@ -127,15 +157,18 @@ PreloadWeight=0
 [Containments][1][General]
 addLaunchersInTaskManager=false
 advanced=false
-appletOrder=2;11;10;9;8;5;6;7
+alignmentUpgraded=true
+appletOrder=2;13;14;12;8;52;5;6;7
 iconSize=50
 panelShadows=false
 panelSize=5
 shadowOpacity=60
 shadowSize=45
+shadowsUpgraded=true
 showGlow=false
 splitterPosition=1
 splitterPosition2=2
+tasksUpgraded=true
 thickMargin=15
 zoomLevel=16
 
@@ -150,12 +183,204 @@ type=org.kde.latte.default
 activeStyle=Dot
 minimizedTaskColoredDifferently=true
 
+[Containments][16]
+activityId=
+byPassWM=false
+dockWindowBehavior=true
+enableKWinEdges=true
+formfactor=2
+immutability=1
+isPreferredForShortcuts=false
+lastScreen=11
+layoutId=
+location=4
+maxLength=100
+name=
+onPrimary=false
+plugin=org.kde.latte.containment
+raiseOnActivityChange=false
+raiseOnDesktopChange=false
+settingsComplexity=4
+timerHide=700
+timerShow=200
+viewType=0
+visibility=1
+wallpaperplugin=org.kde.image
+
+[Containments][16][Applets][40]
+immutability=1
+plugin=org.kde.latte.separator
+
+[Containments][16][Applets][40][Configuration]
+PreloadWeight=0
+
+[Containments][16][Applets][41]
+immutability=1
+plugin=org.kde.plasma.minimizeall
+
+[Containments][16][Applets][41][Configuration]
+PreloadWeight=0
+
+[Containments][16][Applets][41][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][16][Applets][42]
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][16][Applets][42][Configuration]
+PreloadWeight=38
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][16][Applets][42][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][16][Applets][42][Configuration][General]
+positions={"1920x1080":[]}
+url=file:///mnt/KekikHDD
+
+[Containments][16][Applets][43]
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][16][Applets][43][Configuration]
+PreloadWeight=10
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][16][Applets][43][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][16][Applets][43][Configuration][General]
+labelMode=3
+labelText=İndirilenler
+positions={"1920x1080":[]\\,"1600x900":[""]}
+url=file:///home/keyiflerolsun/İndirilenler
+viewMode=1
+
+[Containments][16][Applets][44]
+immutability=1
+plugin=org.kde.latte.plasmoid
+
+[Containments][16][Applets][44][Configuration]
+PreloadWeight=0
+
+[Containments][16][Applets][44][Configuration][General]
+isInLatteDock=true
+launchers59=applications:brave-browser.desktop,applications:code_code.desktop,applications:telegramdesktop.desktop,applications:org.kde.dolphin.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
+manualScrollTasksType=Disabled
+
+[Containments][16][Applets][45]
+immutability=1
+plugin=org.kde.latte.spacer
+
+[Containments][16][Applets][45][Configuration]
+PreloadWeight=26
+
+[Containments][16][Applets][45][Configuration][General]
+containmentType=Latte
+
+[Containments][16][Applets][46]
+immutability=1
+plugin=org.kde.plasma.trash
+
+[Containments][16][Applets][46][Configuration]
+PreloadWeight=0
+
+[Containments][16][Applets][47]
+immutability=1
+plugin=org.kde.latte.spacer
+
+[Containments][16][Applets][47][Configuration]
+PreloadWeight=26
+
+[Containments][16][Applets][47][Configuration][General]
+containmentType=Latte
+
+[Containments][16][Applets][48]
+immutability=1
+plugin=org.kde.latte.spacer
+
+[Containments][16][Applets][48][Configuration]
+PreloadWeight=26
+
+[Containments][16][Applets][48][Configuration][General]
+containmentType=Latte
+
+[Containments][16][ConfigDialog]
+DialogHeight=894
+DialogWidth=539
+
+[Containments][16][Configuration]
+PreloadWeight=0
+
+[Containments][16][General]
+addLaunchersInTaskManager=false
+advanced=false
+alignment=0
+alignmentUpgraded=true
+appletOrder=44;47;45;48;40;42;43;41;46
+iconSize=50
+panelShadows=false
+panelSize=5
+screenEdgeMargin=-1
+shadowOpacity=60
+shadowSize=45
+shadowsUpgraded=true
+showGlow=false
+splitterPosition=1
+splitterPosition2=2
+tasksUpgraded=true
+thickMargin=15
+zoomLevel=16
+
+[Containments][16][Indicator]
+customType=
+enabled=true
+enabledForApplets=true
+padding=0.10000000149011612
+type=org.kde.latte.default
+
+[Containments][16][Indicator][org.kde.latte.default][General]
+activeStyle=Dot
+minimizedTaskColoredDifferently=true
+
 [LayoutSettings]
 background=
+backgroundStyle=0
 color=blue
-lastUsedActivity=
+customBackground=
+customTextColor=
+icon=manjarolinux
+lastUsedActivity=ca1c8cd9-7fbb-40f8-bd43-f6561ce80255
 launchers=
+popUpMargin=-1
 preferredForShortcutsTouched=false
+schemeFile=~/.local/share/color-schemes/Dracula.colors
 showInMenu=true
 textColor=fcfcfc
 version=2
