--- a/.config/latte/keyiflerolsun.layout.latte
+++ b/.config/latte/keyiflerolsun.layout.latte
@@ -11,7 +11,7 @@ immutability=1
 isPreferredForShortcuts=false
 lastScreen=10
 location=4
-name=
+name=Mi Monitor
 onPrimary=false
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
@@ -28,7 +28,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][1][Applets][12][Configuration]
-PreloadWeight=26
+PreloadWeight=2
 
 [Containments][1][Applets][12][Configuration][General]
 containmentType=Latte
@@ -38,7 +38,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][1][Applets][13][Configuration]
-PreloadWeight=26
+PreloadWeight=2
 
 [Containments][1][Applets][13][Configuration][General]
 containmentType=Latte
@@ -48,7 +48,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][1][Applets][14][Configuration]
-PreloadWeight=26
+PreloadWeight=2
 
 [Containments][1][Applets][14][Configuration][General]
 containmentType=Latte
@@ -75,7 +75,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][5][Configuration]
-PreloadWeight=10
+PreloadWeight=0
 activityId=
 formfactor=0
 immutability=1
@@ -105,7 +105,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][52][Configuration]
-PreloadWeight=38
+PreloadWeight=0
 activityId=
 formfactor=0
 immutability=1
@@ -183,6 +183,303 @@ type=org.kde.latte.default
 activeStyle=Dot
 minimizedTaskColoredDifferently=true
 
+[Containments][103]
+PreloadWeight=2
+activityId=
+formfactor=3
+immutability=1
+lastScreen=11
+layoutId=
+location=6
+plugin=org.kde.plasma.private.grouping
+wallpaperplugin=org.kde.image
+
+[Containments][103][Applets][105]
+immutability=1
+plugin=org.kde.plasma.systemmonitor
+
+[Containments][103][Applets][105][Configuration]
+PreloadWeight=2
+
+[Containments][103][Applets][105][Configuration][Appearance]
+chartFace=org.kde.ksysguard.barchart
+title=Bireysel Çekirdek Kullanımı
+
+[Containments][103][Applets][105][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][103][Applets][105][Configuration][SensorColors]
+cpu/all/system=90,76,68
+cpu/all/usage=90,68,71
+cpu/all/user=90,87,68
+cpu/cpu\talLoad=49,124,239
+cpu/cpu0/TotalLoad=49,239,182
+cpu/cpu0/usage=68,71,90
+cpu/cpu1/TotalLoad=192,49,239
+cpu/cpu1/usage=76,68,90
+cpu/cpu2/TotalLoad=239,102,49
+cpu/cpu2/usage=87,68,90
+cpu/cpu3/TotalLoad=117,239,49
+cpu/cpu3/usage=90,68,82
+cpu/cpu4/usage=90,87,68
+cpu/cpu5/usage=76,90,68
+cpu/cpu6/usage=68,90,76
+cpu/cpu7/usage=68,87,90
+cpu/system/TotalLoad=239,148,49
+cpu/system/idle=75,239,49
+cpu/system/sys=194,239,49
+cpu/system/user=49,239,224
+disk/7439a8f0-1340-44d6-9696-c386ae37b276/usedPercent=68,71,90
+disk/all/usedPercent=90,68,71
+disk/df53b3b4-4b90-4972-967e-9ccefe1b1062/usedPercent=71,90,68
+mem/physical/allocatedlevel=239,49,82
+mem/physical/availablelevel=239,49,184
+mem/physical/used=239,49,101
+mem/physical/usedlevel=49,114,239
+memory/physical/freePercent=71,90,68
+memory/physical/used=68,90,76
+memory/physical/usedPercent=82,90,68
+network/all/download=68,71,90
+network/all/upload=90,87,68
+os/system/uptime=68,82,90
+uptime=164,239,49
+
+[Containments][103][Applets][105][Configuration][Sensors]
+highPrioritySensorIds=["cpu/cpu.*/usage"]
+lowPrioritySensorIds=[]
+totalSensors=["cpu/all/usage"]
+
+[Containments][103][Applets][107]
+immutability=1
+plugin=org.kde.plasma.mediacontroller_plus
+
+[Containments][103][Applets][107][Configuration]
+PreloadWeight=2
+
+[Containments][15]
+activityId=
+byPassWM=false
+dockWindowBehavior=true
+enableKWinEdges=true
+formfactor=2
+immutability=1
+isPreferredForShortcuts=false
+lastScreen=11
+layoutId=
+location=3
+maxLength=100
+name=Laptop Üst
+onPrimary=false
+plugin=org.kde.latte.containment
+raiseOnActivityChange=false
+raiseOnDesktopChange=false
+timerHide=700
+timerShow=200
+viewType=1
+visibility=0
+wallpaperplugin=org.kde.image
+
+[Containments][15][Applets][120]
+immutability=1
+plugin=org.kde.windowtitle
+
+[Containments][15][Applets][120][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][120][Configuration][General]
+containmentType=Latte
+filterActivityInfo=false
+placeHolder=keyiflerolsun
+style=Title
+
+[Containments][15][Applets][121]
+immutability=1
+plugin=org.kde.plasma.cryptocurrencyprice
+
+[Containments][15][Applets][121][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][121][Configuration][General]
+controlDecimals=true
+icOnClickAction=refresh
+icon=/home/keyiflerolsun/İndirilenler/bnb_cryptocurrencies_icon_188408.svg
+pricePrefix=
+priceSuffix=
+showPriceSuffix=true
+ttLabel=Binance BNB-USDT
+xeKeyA=price
+xeUrlA=https://api.binance.com/api/v3/ticker/price?symbol=BNBUSDT
+
+[Containments][15][Applets][122]
+immutability=1
+plugin=org.kde.plasma.cryptocurrencyprice
+
+[Containments][15][Applets][122][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][122][Configuration][General]
+controlDecimals=true
+icOnClickAction=refresh
+pricePrefix=$ »\s
+priceSuffix=\s
+showIcon=false
+showPriceSuffix=true
+ttLabel=Binance USDT-TRY
+xeKeyA=price
+xeUrlA=https://api.binance.com/api/v3/ticker/price?symbol=USDTTRY
+
+[Containments][15][Applets][56]
+immutability=1
+plugin=org.kde.plasma.systemtray
+
+[Containments][15][Applets][56][Configuration]
+PreloadWeight=25
+SystrayContainmentId=17
+
+[Containments][15][Applets][73]
+immutability=1
+plugin=org.kde.plasma.appmenu
+
+[Containments][15][Applets][73][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][73][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][75]
+immutability=1
+plugin=org.kde.plasma.volume
+
+[Containments][15][Applets][75][Configuration]
+PreloadWeight=80
+
+[Containments][15][Applets][75][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][78]
+immutability=1
+plugin=org.kde.plasma.bigSur-inlineBattery
+
+[Containments][15][Applets][78][Configuration]
+PreloadWeight=20
+
+[Containments][15][Applets][78][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][78][Configuration][General]
+showPercentage=false
+
+[Containments][15][Applets][80]
+immutability=1
+plugin=org.kpple.kppleMenu
+
+[Containments][15][Applets][80][Configuration]
+PreloadWeight=100
+
+[Containments][15][Applets][80][Configuration][Advanced]
+appStoreSettings=pamac-manager
+customButtonImage=manjarolinux
+showAdvancedMode=true
+useCustomButtonImage=true
+
+[Containments][15][Applets][80][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][82]
+immutability=1
+plugin=org.kde.plasma.networkmanagement
+
+[Containments][15][Applets][82][Configuration]
+PreloadWeight=50
+
+[Containments][15][Applets][91]
+immutability=1
+plugin=org.kde.latte.sidebarbutton
+
+[Containments][15][Applets][91][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][91][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][91][Configuration][General]
+screenEdge=6
+
+[Containments][15][Applets][92]
+immutability=1
+plugin=org.kde.plasma.betterinlineclock
+
+[Containments][15][Applets][92][Configuration]
+PreloadWeight=30
+
+[Containments][15][Applets][92][Configuration][Appearance]
+customDateFormat=d MMM ddd
+dateFormat=customDate
+fixedFont=true
+fontSize=14
+use24hFormat=2
+
+[Containments][15][Applets][92][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][95]
+immutability=1
+plugin=org.kde.milou
+
+[Containments][15][Applets][95][Configuration]
+PreloadWeight=30
+
+[Containments][15][ConfigDialog]
+DialogHeight=600
+DialogWidth=586
+
+[Containments][15][Configuration]
+PreloadWeight=0
+
+[Containments][15][General]
+advanced=false
+alignment=10
+alignmentUpgraded=true
+appletOrder=80;120;73;122;121;56;75;82;95;78;92;91
+appletShadowsEnabled=false
+autoSizeEnabled=false
+dragActiveWindowEnabled=true
+iconSize=24
+inConfigureAppletsMode=true
+lengthExtMargin=5
+minLength=90
+panelShadows=false
+panelSize=100
+panelTransparency=60
+plasmaBackgroundForPopups=true
+screenEdgeMargin=-1
+shadowOpacity=60
+shadowSize=45
+shadows=All
+shadowsUpgraded=true
+showGlow=false
+splitterPosition=3
+splitterPosition2=5
+tasksUpgraded=true
+thickMargin=15
+titleTooltips=false
+zoomLevel=0
+
+[Containments][15][Indicator]
+customType=
+enabled=true
+type=org.kde.latte.plasma
+
 [Containments][16]
 activityId=
 byPassWM=false
@@ -195,7 +492,7 @@ lastScreen=11
 layoutId=
 location=4
 maxLength=100
-name=
+name=Laptop Monitor
 onPrimary=false
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
@@ -204,7 +501,7 @@ settingsComplexity=4
 timerHide=700
 timerShow=200
 viewType=0
-visibility=1
+visibility=6
 wallpaperplugin=org.kde.image
 
 [Containments][16][Applets][40]
@@ -235,7 +532,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][16][Applets][42][Configuration]
-PreloadWeight=38
+PreloadWeight=0
 activityId=
 formfactor=0
 immutability=1
@@ -249,7 +546,7 @@ DialogHeight=540
 DialogWidth=720
 
 [Containments][16][Applets][42][Configuration][General]
-positions={"1920x1080":[]}
+positions={"1920x1080":[]\\,"1600x900":[]}
 url=file:///mnt/KekikHDD
 
 [Containments][16][Applets][43]
@@ -262,7 +559,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][16][Applets][43][Configuration]
-PreloadWeight=10
+PreloadWeight=0
 activityId=
 formfactor=0
 immutability=1
@@ -278,7 +575,7 @@ DialogWidth=880
 [Containments][16][Applets][43][Configuration][General]
 labelMode=3
 labelText=İndirilenler
-positions={"1920x1080":[]\\,"1600x900":[""]}
+positions={"1920x1080":[]\\,"1600x900":[]}
 url=file:///home/keyiflerolsun/İndirilenler
 viewMode=1
 
@@ -299,7 +596,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][16][Applets][45][Configuration]
-PreloadWeight=26
+PreloadWeight=2
 
 [Containments][16][Applets][45][Configuration][General]
 containmentType=Latte
@@ -316,7 +613,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][16][Applets][47][Configuration]
-PreloadWeight=26
+PreloadWeight=2
 
 [Containments][16][Applets][47][Configuration][General]
 containmentType=Latte
@@ -326,7 +623,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][16][Applets][48][Configuration]
-PreloadWeight=26
+PreloadWeight=2
 
 [Containments][16][Applets][48][Configuration][General]
 containmentType=Latte
@@ -345,8 +642,10 @@ alignment=0
 alignmentUpgraded=true
 appletOrder=44;47;45;48;40;42;43;41;46
 iconSize=50
+lastWindowsVisibilityMode=6
 panelShadows=false
-panelSize=5
+panelSize=100
+panelTransparency=20
 screenEdgeMargin=-1
 shadowOpacity=60
 shadowSize=45
@@ -368,6 +667,208 @@ type=org.kde.latte.default
 [Containments][16][Indicator][org.kde.latte.default][General]
 activeStyle=Dot
 minimizedTaskColoredDifferently=true
+
+[Containments][17]
+PreloadWeight=0
+activityId=
+formfactor=2
+immutability=1
+lastScreen=11
+layoutId=
+location=3
+plugin=org.kde.plasma.private.systemtray
+wallpaperplugin=org.kde.image
+
+[Containments][17][Applets][116]
+immutability=1
+plugin=org.kde.plasma.keyboardlayout
+
+[Containments][17][Applets][117]
+immutability=1
+plugin=org.kde.plasma.manage-inputmethod
+
+[Containments][17][Applets][49]
+immutability=1
+plugin=org.kde.plasma.nightcolorcontrol
+
+[Containments][17][Applets][49][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][50]
+immutability=1
+plugin=org.kde.plasma.pkupdates
+
+[Containments][17][Applets][50][Configuration]
+PreloadWeight=26
+
+[Containments][17][Applets][51]
+immutability=1
+plugin=org.kde.kdeconnect
+
+[Containments][17][Applets][51][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][53]
+immutability=1
+plugin=org.kde.plasma.bluetooth
+
+[Containments][17][Applets][53][Configuration]
+PreloadWeight=26
+
+[Containments][17][Applets][54]
+immutability=1
+plugin=com.github.zren.alphablackcontrol
+
+[Containments][17][Applets][54][Configuration]
+PreloadWeight=26
+
+[Containments][17][Applets][55]
+immutability=1
+plugin=org.kde.plasma.printmanager
+
+[Containments][17][Applets][55][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][57]
+immutability=1
+plugin=org.kde.plasma.notifications
+
+[Containments][17][Applets][57][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][58]
+immutability=1
+plugin=org.kde.plasma.battery
+
+[Containments][17][Applets][58][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][59]
+immutability=1
+plugin=org.kde.plasma.keyboardindicator
+
+[Containments][17][Applets][59][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][60]
+immutability=1
+plugin=org.kde.plasma.networkmanagement
+
+[Containments][17][Applets][60][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][76]
+immutability=1
+plugin=org.kde.kscreen
+
+[Containments][17][Applets][76][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][89]
+immutability=1
+plugin=org.kde.plasma.mediacontroller_plus
+
+[Containments][17][Applets][89][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][90]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][17][Applets][90][Configuration]
+PreloadWeight=0
+
+[Containments][17][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][17][General]
+extraItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.mediacontroller,org.kde.kscreen,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
+hiddenItems=MSM Notifier for Plasma5,org.kde.plasma.mediacontroller,org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.networkmanagement,Pamac Updates,chrome_status_icon_1,Paket Yöneticisi,TelegramDesktop,Yakuake,matray,org.kde.plasma.nightcolorcontrol,org.kde.kscreen
+knownItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.bluetooth,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.devicenotifier,org.kde.plasma.mediacontroller,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
+
+[Containments][20]
+activityId=
+byPassWM=false
+dockWindowBehavior=true
+enableKWinEdges=true
+formfactor=3
+immutability=1
+isPreferredForShortcuts=false
+lastScreen=11
+layoutId=
+location=6
+maxLength=99
+name=Laptop Sağ
+onPrimary=false
+plugin=org.kde.latte.containment
+raiseOnActivityChange=false
+raiseOnDesktopChange=false
+timerHide=700
+timerShow=200
+viewType=0
+visibility=8
+wallpaperplugin=org.kde.image
+
+[Containments][20][Applets][102]
+immutability=1
+plugin=org.kde.plasma.grouping
+
+[Containments][20][Applets][102][Configuration]
+ContainmentId=103
+PreloadWeight=2
+
+[Containments][20][Applets][61]
+immutability=1
+plugin=org.kde.plasma.notifications
+
+[Containments][20][Applets][61][Configuration]
+PreloadWeight=0
+
+[Containments][20][ConfigDialog]
+DialogHeight=600
+DialogWidth=586
+
+[Containments][20][Configuration]
+PreloadWeight=0
+
+[Containments][20][General]
+advanced=false
+alignment=10
+alignmentUpgraded=true
+appletOrder=61;102
+appletShadowsEnabled=false
+autoSizeEnabled=false
+dragActiveWindowEnabled=true
+iconSize=300
+inConfigureAppletsMode=true
+isStickedOnBottomEdge=true
+lengthExtMargin=3
+maxLength=99
+panelSize=100
+panelTransparency=30
+plasmaBackgroundForPopups=true
+screenEdgeMargin=4
+shadowOpacity=60
+shadowSize=45
+shadows=All
+shadowsUpgraded=true
+showGlow=false
+splitterPosition=2
+splitterPosition2=4
+tasksUpgraded=true
+thickMargin=4
+titleTooltips=false
+zoomLevel=0
+
+[Containments][20][Indicator]
+customType=
+enabled=true
+type=org.kde.latte.plasma
+
+[Containments][20][Indicator][org.kde.latte.plasma][General]
+enabledForApplets=false
+lengthPadding=0.03
 
 [LayoutSettings]
 background=
