--- a/.config/latte/keyiflerolsun.layout.latte
+++ b/.config/latte/keyiflerolsun.layout.latte
@@ -161,6 +161,8 @@ advanced=false
 alignmentUpgraded=true
 appletOrder=2;13;14;12;8;52;5;6;7
 iconSize=50
+inConfigureAppletsMode=true
+lockedZoomApplets=52;5;6;7
 panelShadows=false
 panelSize=5
 shadowOpacity=60
@@ -363,6 +365,22 @@ updateInterval=30
 DialogHeight=540
 DialogWidth=720
 
+[Containments][15][Applets][143]
+immutability=1
+plugin=org.kde.plasma.kickoff
+
+[Containments][15][Applets][143][Configuration]
+PreloadWeight=100
+
+[Containments][15][Applets][143][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
+[Containments][15][Applets][143][Configuration][General]
+favoritesPortedToKAstats=true
+icon=manjarolinux
+systemFavorites=suspend\\,hibernate\\,reboot\\,shutdown
+
 [Containments][15][Applets][56]
 immutability=1
 plugin=org.kde.plasma.systemtray
@@ -481,14 +499,13 @@ PreloadWeight=0
 advanced=false
 alignment=10
 alignmentUpgraded=true
-appletOrder=80;120;73;122;121;142;75;82;95;78;56;92;135;91
+appletOrder=143;120;73;122;121;142;75;82;95;78;56;92;135;91
 appletShadowsEnabled=false
 autoSizeEnabled=false
 dragActiveWindowEnabled=true
 iconSize=24
-inConfigureAppletsMode=true
 lengthExtMargin=5
-lockedZoomApplets=120;73;122;121;142;75;82;95;78;56;92;135;91
+lockedZoomApplets=143;120;73;122;121;142;75;82;95;78;56;92;135;91
 minLength=90
 panelShadows=false
 panelSize=100
@@ -674,7 +691,9 @@ alignment=0
 alignmentUpgraded=true
 appletOrder=44;47;45;48;40;42;43;41;46
 iconSize=50
+inConfigureAppletsMode=true
 lastWindowsVisibilityMode=6
+lockedZoomApplets=42;43;41;46
 panelShadows=false
 panelSize=100
 panelTransparency=20
@@ -800,9 +819,9 @@ DialogHeight=540
 DialogWidth=720
 
 [Containments][17][General]
-extraItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.mediacontroller,org.kde.kscreen,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod,Yeni bildirim yok
+extraItems=org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.mediacontroller,org.kde.kscreen,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
 hiddenItems=MSM Notifier for Plasma5,org.kde.plasma.mediacontroller,org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.networkmanagement,Pamac Updates,chrome_status_icon_1,Paket Yöneticisi,TelegramDesktop,Yakuake,matray,org.kde.plasma.nightcolorcontrol,org.kde.kscreen,Yeni bildirim yok
-knownItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.bluetooth,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.devicenotifier,org.kde.plasma.mediacontroller,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
+knownItems=org.kde.plasma.bluetooth,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.devicenotifier,org.kde.plasma.mediacontroller,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
 
 [Containments][18]
 PreloadWeight=0
@@ -904,9 +923,9 @@ DialogHeight=540
 DialogWidth=720
 
 [Containments][18][General]
-extraItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.mediacontroller,org.kde.kscreen,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod,Yeni bildirim yok
+extraItems=org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.mediacontroller,org.kde.kscreen,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
 hiddenItems=MSM Notifier for Plasma5,org.kde.plasma.mediacontroller,org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.networkmanagement,Pamac Updates,chrome_status_icon_1,Paket Yöneticisi,TelegramDesktop,Yakuake,matray,org.kde.plasma.nightcolorcontrol,org.kde.kscreen,Yeni bildirim yok
-knownItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.bluetooth,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.devicenotifier,org.kde.plasma.mediacontroller,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
+knownItems=org.kde.plasma.bluetooth,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.kdeconnect,org.kde.plasma.keyboardindicator,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.devicenotifier,org.kde.plasma.mediacontroller,org.kde.plasma.notifications,org.kde.plasma.nightcolorcontrol,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
 
 [Containments][19]
 activityId=
@@ -1148,7 +1167,6 @@ appletShadowsEnabled=false
 autoSizeEnabled=false
 dragActiveWindowEnabled=true
 iconSize=28
-inConfigureAppletsMode=true
 lengthExtMargin=5
 lockedZoomApplets=125;99;88;98;96;141;87;85;83;97;94;84;134;93
 minLength=90
