--- a/.config/latte/keyiflerolsun.layout.latte
+++ b/.config/latte/keyiflerolsun.layout.latte
@@ -64,7 +64,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.manjaro.pamac.manager.desktop,applications:systemsettings.desktop,applications:org.kde.dolphin.desktop,applications:brave-browser.desktop,applications:code_code.desktop,applications:telegramdesktop.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
+launchers59=applications:brave-browser.desktop,applications:telegramdesktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
 manualScrollTasksType=Disabled
 
 [Containments][1][Applets][5]
@@ -404,7 +404,7 @@ PreloadWeight=0
 
 [Containments][16][Applets][44][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.manjaro.pamac.manager.desktop,applications:systemsettings.desktop,applications:org.kde.dolphin.desktop,applications:brave-browser.desktop,applications:code_code.desktop,applications:telegramdesktop.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
+launchers59=applications:brave-browser.desktop,applications:telegramdesktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
 manualScrollTasksType=Disabled
 
 [Containments][16][Applets][45]
